<resources>
    <string name="app_name">IITP-Connect</string>
    <string name="facebook_app_id">685984648423758</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="coding_calendar">Coding Calendar</string>
    <string name="check_your_internet_connection">Check your connection!</string>
    <string name="authority">com.iitp.njack.iitp_connect</string>
    <string name="participate">Participate</string>
    <string name="duration_approximately">Duration: Approximately </string>
    <string name="hours"> hours</string>
    <string name="contest_description_coding_contest_for_programming_enthusiasts">Contest Description: Coding Contest for Programming enthusiasts</string>
    <string name="contest_description">Contest Description:</string>
    <string name="total_classes">Total Classes :</string>
    <string name="classes_present">Classes Present :</string>
    <string name="codechef">CODECHEF</string>
    <string name="codeforces">CODEFORCES</string>
    <string name="hackerrank">HACKERRANK</string>
    <string name="topcoder">TOPCODER</string>
    <string name="urioj">URIOJ</string>
    <string name="hackerearth">HACKEREARTH</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="nav_header_title">IITP Connect</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="text_empty">Nothing to show here</string>
    <string name="empty_view_icon">Empty View Icon</string>
    <string name="refresh_complete">Refresh Complete</string>
    <string name="description">Description</string>
    <string name="device_settings">Device Settings</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="suggestions">Suggestions</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout_confirmation">Log Out</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="roll">Roll</string>
    <string name="course">Course</string>
    <string name="branch">Branch</string>
    <string name="year">Year</string>
    <string name="login_prompt">You need to login first</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="unknown_error">Some error occured</string>
    <string name="log_in_success">Logged in successfully</string>
    <string name="log_out_success">Logged out successfully</string>
    <string name="time_table_dialog_title">Select Timetable</string>
    <string name="year_head_timetable">Year</string>
    <string name="branch_head_timetable">Branch</string>
    <string name="course_head_timetable">Course</string>
    <string name="facebook_feed">Facebook Feed</string>
    <string name="iitpatna">UCNawvBk4ZJLpbHg6V41odmg</string>
    <string name="enterpreneurship">UCeQ7Tz0Zfn5ziGLQtXEIx4g</string>
    <string name="hosca">UCiHs6tyJeDCI0-wbYFUnh9Q</string>
    <string name="anwesha">UCVVdnGvmkm-Z9v9IKAq77JQ</string>
</resources>
